--- a/style.css
+++ b/style.css
@@ -35,10 +35,13 @@ h2 {
 .description {
     color: hsl(0, 0%, 42%);
     font-weight: 500;
+    line-height: 1.5rem;
 }
 .avatar {
-    max-width: 3rem;
+    max-width: 2rem;
+    max-height: 2rem;
     margin-right: 1rem;
+    margin-top: 0.6rem;
 }
 .author {
     display: flex;
